--- a/GuPPy/runFiberPhotometryAnalysis.ipynb
+++ b/GuPPy/runFiberPhotometryAnalysis.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputParameters = \"/Users/VENUS/Downloads/FP_Data/habitEarly/inputParameters/inputParameters.json\" "
+    "inputParametersPath = \"/Users/pauladkisson/GuPPyParamtersUsed.json\""
    ]
   },
   {
